# cookiecutter-cookbook

./: README.md  cookiecutter.json
kitchenai_{{cookiecutter.project_name}}/: Dockerfile  README.md  docker-compose.yml  justfile  kitchenai.yml  pyproject.toml
kitchenai_{{cookiecutter.project_name}}/kitchenai_{{cookiecutter.project_name}}/: kitchen.py
{{cookiecutter.project_name}}/: README.md  docker-compose.yml  justfile  kitchenai.yml  pyproject.toml
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: kitchen.py
