[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_name }}"
version = "0.0.1"
authors = [{ name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }]
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "django-ninja",
  "kitchenai-sdk==0.1.5a1",
  "llama-index", 
  "chromadb", 
  "llama-index-vector-stores-chroma", 
  "boto3"
]

[project.urls]
Documentation = "https://github.com/epuerta/cookbook#readme"
Issues = "https://github.com/epuerta/cookbook/issues"
Source = "https://github.com/epuerta/cookbook"

[tool.hatch.version]
path = "src/cookbook/__about__.py"

[tool.falco.work]
server = "python manage.py migrate && python manage.py runserver {address}"
worker = "python manage.py qcluster"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/cookbook tests}"

[tool.coverage.run]
source_pkgs = ["cookbook", "tests"]
branch = true
parallel = true
omit = [
  "src/cookbook/__about__.py",
]

[tool.coverage.paths]
cookbook = ["src/cookbook", "*/cookbook/src/cookbook"]
tests = ["tests", "*/cookbook/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
